unpackaged/main/default/objects/FSL_Milestone_Time_Trigger__c/FSL_Milestone_Time_Trigger__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>FSL Milestone Time Trigger</label>
</CustomObject>