unpackaged/main/default/objects/FSL_Milestone_Time_Trigger__c/fields/Time_Trigger_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Trigger_Minutes__c</fullName>
    <label>Time Trigger(Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>