unpackaged/main/default/objects/FSL_Milestone_Time_Trigger__c/fields/User_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Message_Id__c</fullName>
    <label>User Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>