unpackaged/main/default/objects/FSL_Milestone_Time_Trigger__c/fields/Worktype_Duration__c.field-meta.xml
<CustomField>
    <fullName>Worktype_Duration__c</fullName>
    <inlineHelpText>Use the format of 1.X where X would be the % of the duration the technician had spend time than the allocated work type duration</inlineHelpText>
    <label>Worktype Duration Threshold</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>