unpackaged/main/default/objects/FSL_Milestone_Time_Trigger__c/listViews/Enhanced.listView-meta.xml
<ListView>
    <fullName>Enhanced</fullName>
    <columns>NAME</columns>
    <columns>Milestone_Name__c</columns>
    <columns>Time_Trigger_Minutes__c</columns>
    <columns>User_Message_Id__c</columns>
    <columns>Worktype_Duration__c</columns>
    <filterScope>Everything</filterScope>
    <label>Enhanced</label>
    <language>en_US</language>
</ListView>